# skill

./: .dockerignore  .envrc  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.upgrade-test  LINUX.md  LLM.md  PLAN.md  PLATFORM-COMPILE-GUIDE.md  README.md  SKILL.md  TODO.md  WINDOWS-VULKAN-FIX.md  WINDOWS.md  biome.json  cli.ts  deny.toml  generate-icons.js  package-lock.json  package.json  playwright.config.ts  release-windows.ps1  release.sh  rlx-models.path.example  rlx.path.example  svelte.config.js  test.ts  test_daemon_hooks.sh  verify_sqlite.sh  vite.config.js
crates/iroh-example-client/: Cargo.toml
crates/iroh-example-client/src/: main.rs
crates/iroh_test_client/: Cargo.toml
crates/iroh_test_client/src/: main.rs
crates/iroh_test_client/tests/: e2e.rs  full_lifecycle.rs
crates/skill-asr/: Cargo.toml  build.rs
crates/skill-asr/src/: catalog.rs  engine.rs  lib.rs  segmenter.rs
crates/skill-asr/tests/: asr_e2e.rs  asr_funasr_nemotron_smoke.rs
crates/skill-calendar/: Cargo.toml  README.md  build.rs
crates/skill-calendar/src/: ical.rs  lib.rs  linux.rs  macos.rs  skill_calendar_macos.m  types.rs  windows.rs
crates/skill-daemon/: Cargo.toml  build.rs
crates/skill-daemon-state/: Cargo.toml
crates/skill-daemon-state/src/: auth.rs  lib.rs  state.rs  text_embedder.rs  util.rs
crates/skill-daemon-state/tests/: cosine_parity.rs  rlx_semantic.rs
crates/skill-daemon/.cargo/: config.toml
crates/skill-daemon/src/: activity.rs  auth.rs  auth_middleware.rs  background.rs  calibration_runner.rs  cmd_dispatch.rs  embedding_migration.rs  handlers.rs  idle_reembed.rs  main.rs  monitor.rs  reconnect.rs  scanner.rs  service_installer.rs  session_runner.rs  state.rs  text_embedder.rs  tty.rs  tty_backfill.rs  tty_embedder.rs  tty_finalizer.rs  util.rs
crates/skill-daemon/src/cmd_dispatch/: data_cmds.rs  llm_cmds.rs  mod.rs  system_cmds.rs
crates/skill-daemon/src/embed/: accumulator.rs  day_store.rs  device.rs  mod.rs  worker.rs
crates/skill-daemon/src/routes/: activity_status.rs  analysis.rs  api.rs  asr.rs  brain.rs  core.rs  history.rs  iroh.rs  labels.rs  mod.rs  models_validate.rs  search.rs  settings.rs  settings_calibration.rs  settings_device.rs  settings_exg.rs  settings_handlers.rs  settings_hooks_activity.rs  settings_io.rs  settings_llm.rs  settings_llm_chat.rs  settings_llm_runtime.rs  settings_lsl.rs  settings_screenshots.rs  settings_ui.rs  test_mode.rs  (+1 more)
crates/skill-data/: Cargo.toml  README.md
crates/skill-data/src/: active_window.rs  activity_store.rs  ansi.rs  device.rs  dnd.rs  eeg_scores.rs  error.rs  gpu_stats.rs  health_store.rs  hooks_log.rs  label_store.rs  lib.rs  ppg_analysis.rs  screenshot_store.rs  session_csv.rs  session_parquet.rs  session_writer.rs  util.rs  validation_store.rs
crates/skill-data/tests/: hooks_log_tests.rs  screenshot_store_tests.rs  session_csv_roundtrip_tests.rs  session_csv_tests.rs  session_parquet_tests.rs
crates/skill-eeg/: Cargo.toml  README.md
crates/skill-eeg/benches/: dsp_bench.rs
crates/skill-eeg/src/: artifact_detection.rs  band_metrics.rs  constants.rs  cpu_fft.rs  eeg_bands.rs  eeg_filter.rs  eeg_model_config.rs  eeg_quality.rs  head_pose.rs  lib.rs  proptest_tests.rs  rlx_fft.rs
crates/skill-eeg/tests/: dsp_pipeline_test.rs  fft_mlx_e2e.rs
crates/skill-exg/: Cargo.toml  README.md
crates/skill-exg/src/: eegdino.rs  lib.rs  lumamba.rs  neurorvq.rs
crates/skill-health/: Cargo.toml  README.md
crates/skill-health/src/: lib.rs  store.rs  store_db.rs  store_types.rs  store_util.rs
crates/skill-iroh/: Cargo.toml
crates/skill-iroh/src/: auth.rs  commands.rs  device_proto.rs  device_receiver.rs  lib.rs  scope.rs  tests.rs  tunnel.rs
crates/skill-jobs/: Cargo.toml  README.md
crates/skill-jobs/src/: lib.rs
crates/skill-jobs/tests/: queue_tests.rs
crates/skill-label-index/: Cargo.toml  README.md  build.rs
crates/skill-label-index/src/: lib.rs
crates/skill-label-index/tests/: daemon_hnsw_loop_test.rs  label_index_state_tests.rs
crates/skill-llm/: Cargo.toml  README.md  build.rs  llm_catalog.json
crates/skill-llm/src/: catalog.rs  chat_store.rs  config.rs  engine.rs  error.rs  event.rs  handlers.rs  lib.rs  log.rs
crates/skill-llm/tests/: catalog_persistence_tests.rs  config_tests.rs  llm_e2e.rs  llm_mtp_e2e.rs  minicpm5_e2e.rs  qwen3_voice_chat.rs
crates/skill-neurorvq/: Cargo.toml  README.md
crates/skill-neurorvq/src/: lib.rs
crates/skill-neutts/: Cargo.toml
crates/skill-neutts/src/: cache.rs  download.rs  lib.rs  model.rs  npy.rs  phonemize.rs  preprocess.rs
crates/skill-neutts/tests/: neutts_e2e.rs
crates/skill-router/: Cargo.toml  README.md  build.rs
crates/skill-router/examples/: umap_hotpath.rs
crates/skill-router/src/: lib.rs  umap_device.rs
crates/skill-router/tests/: router_cache_tests.rs  umap_e2e_bench.rs
crates/skill-screenshots/: Cargo.toml  README.md  build.rs
crates/skill-screenshots/assets/: ocr-detection.safetensors
crates/skill-screenshots/src/: capture.rs  chat_image.rs  config.rs  context.rs  gif_encode.rs  lib.rs  platform.rs  rlx_image.rs  user_screenshot.rs
crates/skill-screenshots/tests/: context_tests.rs  metrics_tests.rs  rlx_image_embed.rs
crates/skill-skills/: Cargo.toml  README.md
crates/skill-skills/src/: lib.rs  sync.rs
crates/skill-skills/tests/: load_skills_integration_tests.rs  sync_tests.rs
crates/skill-tools/: Cargo.toml  README.md
crates/skill-tools/src/: context.rs  defs.rs  error.rs  exec.rs  lib.rs  log.rs  parse.rs  search.rs  types.rs  web_cache.rs
crates/skill-tools/tests/: coerce_tests.rs  helpers_tests.rs  log.rs  safety_tests.rs  status_format_tests.rs  truncate_tests.rs
crates/skill-tts/: Cargo.toml  README.md  build.rs
crates/skill-tts/e2e/: Cargo.toml  main.rs
crates/skill-tts/src/: catalog.rs  config.rs  engines.rs  kitten.rs  lib.rs  log.rs  neutts.rs  weights_download.rs  whisper_validate.rs
crates/skill-tts/tests/: qwen3_tts_e2e.rs  tts_validate_e2e.rs
crates/skill-tty/: Cargo.toml
crates/skill-tty/src/: main.rs
(+1679 files in other folders)
