# ── Cargo Workspace ────────────────────────────────────────────────────────────
#
# All Rust crates are members of a single workspace so they share one target
# directory (src-tauri/target/).  This avoids multi-GB duplication that occurs
# when crates under crates/ are built independently (each getting its own
# target/ with duplicate copies of every transitive dependency).
#
# The shared target directory is configured via .cargo/config.toml:
#   [build]
#   target-dir = "src-tauri/target"
#
# This keeps the binary output where the Tauri CLI and build scripts expect it.

[workspace]
resolver = "2"
exclude = []
members = [
    "src-tauri",
    "crates/skill-autostart",
    "crates/skill-calendar",
    "crates/skill-commands",
    "crates/skill-constants",
    "crates/skill-daemon",
    "crates/skill-daemon-common",
    "crates/skill-data",
    "crates/skill-devices",
    "crates/skill-eeg",
    "crates/skill-exg",
    "crates/skill-headless",
    "crates/skill-health",
    "crates/skill-oura",
    "crates/skill-gpu",
    "crates/skill-history",
    "crates/skill-iroh",
    "crates/skill-jobs",
    "crates/skill-label-index",
    "crates/skill-lsl",
    "crates/skill-llm",
    "crates/skill-location",
    "crates/skill-router",
    "crates/skill-screenshots",
    "crates/skill-settings",
    "crates/skill-skills",
    "crates/skill-tools",
    "crates/skill-tray",
    "crates/skill-neutts",
    "crates/skill-tts",
    "crates/skill-asr",
    "crates/skill-tty",
    "crates/skill-vision",
    "crates/iroh_test_client",
    "crates/iroh-example-client",
    "crates/skill-daemon-common",
    "crates/skill-daemon-state",
    "crates/skill-daemon-routes",
    "crates/skill-daemon",
]

# btleplug: improved macOS BLE scanning behaviour.
# NOTE: upstream branch has a typo ("imrpoved" → "improved"); tracked for rename.
#
# [patch] sections MUST live in the workspace root — they are NOT inherited
# from member Cargo.toml files.

[patch.crates-io]
btleplug        = { git = "https://github.com/eugenehp/btleplug.git", branch = "imrpoved_mac_version" }
# rlx / rlx-models: resolved from crates.io (=0.2.11, pinned in [workspace.dependencies]).
# ../rlx and ../rlx-models are LOCAL-DEV ONLY — never patched here so CI/published
# builds use the registry. For local work against sibling checkouts, run
# `bash scripts/ensure-rlx.sh` (writes a cargo `[patch]` override outside the repo).
# Fix glib VariantStrIter unsoundness (GHSA-wrw7-89jp-8q8g) — &p → &mut p
# All gtk-rs-core crates must come from the same source to keep -sys types aligned.
glib            = { git = "https://github.com/eugenehp/gtk-rs-core.git", branch = "0.18-patched" }
glib-sys        = { git = "https://github.com/eugenehp/gtk-rs-core.git", branch = "0.18-patched" }
gobject-sys     = { git = "https://github.com/eugenehp/gtk-rs-core.git", branch = "0.18-patched" }
gio             = { git = "https://github.com/eugenehp/gtk-rs-core.git", branch = "0.18-patched" }
gio-sys         = { git = "https://github.com/eugenehp/gtk-rs-core.git", branch = "0.18-patched" }
glib-macros     = { git = "https://github.com/eugenehp/gtk-rs-core.git", branch = "0.18-patched" }
# tribev2: using crates.io 0.1.0 (no patch needed — restore path dep when developing locally)
# eegdino 0.2.0: device_label missing OneApi/Hexagon arms for rlx 0.2.10
eegdino          = { path = "patches/eegdino-0.2.0" }

# ── Workspace dependencies ─────────────────────────────────────────────────────
#
# Shared across multiple crates to ensure a single version + feature set.

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
base64 = "0.22"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# ── TLS crypto provider ──────────────────────────────────────────────────────
#
# rustls defaults to aws-lc-rs whose C build (aws-lc-sys) takes ~45 s on a
# clean compile — the single biggest bottleneck.  ring is already in the dep
# tree (via iroh/noq-proto) and builds in <2 s, so we force all workspace
# consumers onto ring instead.  Crates that depend on rustls (directly or
# transitively) should use this workspace dep.
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
# Force the `deflate` feature on zip 4.x so tauri-plugin-updater can extract
# Deflate-compressed entries. Without this, zip 4.6.1 is compiled without
# flate2 and produces "unsupported compression method" when the updater tries
# to unpack a .nsis.zip built with standard Deflate (method 8).
zip = { version = "7", features = ["deflate"] }

# RLX — published on crates.io (features set per crate).
#   rlx        — https://github.com/MIT-RLX/rlx — runtime + IR
#   rlx-models — https://github.com/MIT-RLX/rlx-models — model loaders / runners
# These pins are what CI and release builds use. For local development against
# sibling ../rlx / ../rlx-models checkouts, run `bash scripts/ensure-rlx.sh` — it
# registers a cargo `[patch]` override OUTSIDE the repo (and skip-worktrees the
# lock), so you build against your local rlx without editing Cargo.toml or
# committing a path-based Cargo.lock (never commit `../` paths here).
rlx          = { version = "=0.2.11", default-features = false }
rlx-models   = { version = "=0.2.11", default-features = false }
rlx-minicpm5 = { version = "=0.2.11", default-features = false }
rlx-minimax  = { version = "=0.2.11", default-features = false }
rlx-nemotron = { version = "=0.2.11", default-features = false }
rlx-gemma    = { version = "=0.2.11", default-features = false }
rlx-neutts   = { version = "=0.2.11", default-features = false }
rlx-runtime   = { version = "=0.2.11", default-features = false }
rlx-umap      = { version = "=0.2.11", default-features = false }
rlx-kittentts = { version = "=0.2.11", default-features = false }
rlx-inflect-nano = { version = "=0.2.11", default-features = false }
rlx-tiny-tts  = { version = "=0.2.11", default-features = false }
rlx-whisper   = { version = "=0.2.11", default-features = false }
rlx-vad       = { version = "=0.2.11", default-features = false }
rlx-qwen3-asr = { version = "=0.2.11", default-features = false }
rlx-qwen3-tts = { version = "=0.2.11", default-features = false }
rlx-kyutai-tts = { version = "=0.2.11", default-features = false }
rlx-orpheus   = { version = "=0.2.11", default-features = false }
rlx-voxtral   = { version = "=0.2.11", default-features = false }
# rlx-ocr keeps its default features (rlx + tensor-ops); consumers add `convert-rten`.
rlx-ocr       = { version = "=0.2.11" }

# ── Workspace lints ────────────────────────────────────────────────────────────
#
# Consistent lint policy across every crate.  Individual crates inherit these
# via `[lints] workspace = true` in their own Cargo.toml.
#
# We warn (not deny) so CI stays green while we migrate, but clippy will flag
# every new `unwrap()` / missing safety doc / needless pass-by-value.

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
# skill-daemon gates two EEG encoders (reve, brainjepa) that are pending RLX
# migration — their `reve-rs` / `brainjepa` deps aren't published yet, so the
# features stay commented out in skill-daemon/Cargo.toml while the
# `#[cfg(feature = "embed-reve" / "embed-brainjepa")]` guards remain in src.
# Declare those cfg values as known so `unexpected_cfgs` stays quiet without
# making the half-wired features selectable (an empty stub feature would break
# `--all-features`). Drop a value here once its real feature lands.
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("embed-reve", "embed-brainjepa"))',
] }

[workspace.lints.clippy]
# Phase 1 hardening: make critical runtime-safety lints hard errors.
# NOTE: some tests and helper crates are still using `unwrap()`/`panic!()`;
# keep these as allow so the workspace can pass the strict push hook.
unwrap_used            = "allow"
# expect_used — downgraded: thread::spawn().expect(), NonZero::new(1).expect(),
# and Tauri app builder .expect() are idiomatic and unrecoverable. The lint
# catches ~50 legitimate uses vs ~0 bugs.  Use `lock_or_recover()` for Mutex.
# expect_used          = "warn"
panic                  = "allow"
undocumented_unsafe_blocks = "deny"
# needless_pass_by_value — disabled: Tauri #[command] handlers and actor-thread
# spawn sites require owned types; the lint produces ~280 false positives.
# needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "allow"
redundant_closure   = "allow"
manual_let_else        = "allow"
semicolon_if_nothing_returned = "warn"
field_reassign_with_default = "allow"
manual_range_contains = "allow"
manual_is_multiple_of = "allow"
bool_assert_comparison = "allow"
useless_conversion = "allow"
useless_vec = "allow"
items_after_test_module = "allow"
module_inception = "allow"
assertions_on_constants = "allow"
unnecessary_cast = "allow"
# doc_lazy_continuation — clippy 1.95 made this a default warn and it fires on
# dozens of pre-existing doc comments across the workspace (a wrapped line under
# a `-`/`*`/`+`/`N.` list item that isn't re-indented). It is a doc-rendering
# nit, not a correctness issue; allow it so the strict `-D warnings` push hook
# passes without churning every crate's docs. (Specific-lint allow overrides the
# `warnings` group even under `-D warnings`.)
doc_lazy_continuation = "allow"

# ── Build profiles ────────────────────────────────────────────────────────────
#
# Rust's incremental compilation on macOS uses "thin archives" for rlibs.
# When a compilation unit inside candle-core produces a zero-length .o file
# (any module that is entirely cfg-gated away at the chosen feature set), the
# thin-archive builder tries to mmap it and panics:
#   "failed to map object file: memory map must have a non-zero length"
# Disabling incremental for just candle-core avoids the thin-archive code path
# without penalising the rest of the workspace.
# Tracked upstream: https://github.com/rust-lang/rust/issues/129443
[profile.dev.package.candle-core]
incremental = false

[profile.dev]
codegen-units = 8
# Local/dev checks are CPU-bound and do not need full debug symbols.
# This cuts compile time and disk I/O significantly.
debug = 0

# ── Release profile ──────────────────────────────────────────────────────────
#
# thin LTO gives ~90 % of full (fat) LTO's runtime performance benefit at a
# fraction of the link-time cost.  On Windows (the slowest CI platform) this
# shaves 2-5 min off release builds compared to the Cargo default (no LTO).
#
# codegen-units = 8 allows the backend to parallelise within each crate.
# Combined with thin LTO the final binary is only ~1-2 % larger than
# codegen-units = 1 + fat LTO, but compiles significantly faster.
# ── Test profile ──────────────────────────────────────────────────────────────
#
[profile.release]
lto           = "thin"
codegen-units = 8

# ── Size-optimised release profile (opt-in) ────────────────────────────────
# Builds a noticeably smaller binary than `release` at the cost of much
# longer link time. Used by the release-min CI builds and the size-comparison
# matrix. Use with `cargo build --profile release-min ...`.
#
# Wins (measured on skill-daemon llm-rlx-metal):
#   * lto = "fat"          — cross-crate dead-code elimination (~5-10%)
#   * codegen-units = 1    — wider monomorphisation merging (~2-5%)
#   * strip = "symbols"    — drops local + debuginfo + symtab (~3-8%)
# Combined: typically 10-20% smaller than `release`.
#
# Not the default because the link step grows from ~3 min to ~10+ min on M4.
[profile.release-min]
inherits      = "release"
lto           = "fat"
codegen-units = 1
strip         = "symbols"
